# myagent

./: .coverage  .env.example  .gitignore  DEEP_AGENTS_README.md  FIXES_SUMMARY.md  GET_STARTED.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_SUMMARY.md  LICENSE  MANAGER_TEST_PLAN.md  MANAGER_TEST_SUMMARY.md  MANIFEST.in  Makefile  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  README.md  RECOMMENDATIONS_COMPLETED.md  TRACE_SYSTEM.md  TRACE_VIEWER_README.md  coverage.xml  pyproject.toml  requirements-ws.txt  sample.py  setup_ws.py  simple_test.py  test_edge_cases.py  test_multi_session.py  test_multi_simple.py  test_multiturn.py  test_single.py  test_state_manager.py  trace_server.py  trace_viewer.html
data/: analysis_results.md
docs/: DeepAgents_Analysis_Document.md  PPT_FORMAT.md  README.md  RESEARCH_AGENT_WORKFLOW.md  UPGRADE_SUMMARY.md  echarts-visualization-guide.md  mermaid_test.html  plan_and_solve_flow.md  plan_and_solve_summary.md  plan_solver_implementation_plan.md  trace_system_architecture.md  trace_usage_guide.md  websocket-known-issues.md
docs/api/: agents.md  tools.md  tools_zh.md
docs/architecture/: system_architecture.md
docs/examples/: simple-agent.md
docs/guides/: README_zh.md  basic-concepts.md  deep-agent-guide_zh.md  installation.md  quick-start.md  research-agent-guide_zh.md
docs/tracing/: overview.md  trace_guide_zh.md
docs/websocket/: server-setup.md
docs/ws-manager/: README.md  USAGE_GUIDE.md  api-design.md  architecture-summary.md  architecture.md  cli-usage.md  data-models.md  implementation-plan.md  manager-guide_zh.md  routing-strategies.md
docs/ws-protocol/: EVENT_DESIGN_GUIDE.md  FLOWCHARTS.md  QUICK_REFERENCE.md
docs/ws-protocol/stable/: CHANGELOG.md  CONTENT_VS_METADATA.md  ERROR_HANDLING.md  ERROR_RECOVERY_GUIDE.md  ERROR_RECOVERY_STRATEGIES.md  EVENT_CROSS_REFERENCE.md  EVENT_PAYLOADS.md  EVENT_PAYLOADS_DETAILED.md  EVENT_PROTOCOL.md  EVENT_TYPES.ts  FIELD_CONVENTIONS.md  PAYLOAD_VALIDATION_GUIDE.md  README.md  RECONNECTION.md  RECONNECT_CLARIFICATION.md  TABLE_OF_CONTENTS.md  VERSIONING.md
docs/ws-server/: README.md  backend-deployment.md  basic-concepts.md  client-state-management.md  frontend-integration.md  llm-message-event.md  plan_solver_messages.md  quick-start.md  react-integration.md  sequence-diagram.md  universal-client-protocol.md  user-confirmation.md  visualization-integration.md  ws-guide_zh.md
docs/ws-server/user_confim/: client-confirmation-guide.md  confirmation-api-reference.md  confirmation-quickstart.md  confirmation-troubleshooting.md
examples/: .env.database.example  README.md  README_DATA2PPT.md  README_PLAN_SOLVE.md  client_state_demo.py  confirmation_client.html  data2ppt.py  data2ppt_simple.py  data_analysis.py  debug_websocket_connection.py  deep_agent_example.py  deep_agent_simple_test.py  deep_agent_test.py  demo_simple_agent.py  fixed_confirmation_demo.py  manager_demo.py  mysql_text2sql.py  mysql_text2sql_sequence_diagrams.md  mysql_text2sql_with_realtime_trace.py  plan_and_solve.py  plan_solve_data2ppt.py  plan_solve_data2ppt_ws.py  plan_solve_template_report.py  research_agent.py  research_agent_demo.py  sqllite_analysis.py  state_test_server.py  test_agent_code_execution.py  test_api_manually.py  test_code_execution.py  test_connection_tracking.py  test_web_console.py  verify_web_console_fix.py  weather_agent.py  web_console_demo.py  web_search.py  ws_client_demo.html  ws_confirmation_demo.py  ws_weather_agent.py
myagent/: __init__.py  config.py  llm.py  llm_logger.py  logger.py  schema.py  stats.py  type.py
myagent-ws/: agent_runner.py  frontend_react_trace.jsx  message_bridge.py  requirements_websocket.txt  websocket_deployment_guide.md  websocket_server_pure.py  websocket_trace_protocol.py  websocket_trace_server.py
myagent/agent/: __init__.py  base.py  factory.py  plan_solver.py  react.py  toolcall.py
myagent/cli/: __init__.py  server.py
myagent/manager/: __init__.py
myagent/manager/api/: __init__.py  models.py  server.py
myagent/manager/cli/: __init__.py  __main__.py  api.py  manager.py  proxy.py
myagent/manager/core/: __init__.py  manager.py  registry.py  router.py
myagent/manager/monitoring/: __init__.py  health.py
myagent/manager/proxy/: __init__.py  server.py
myagent/manager/storage/: __init__.py  models.py  repository.py
myagent/middleware/: __init__.py  base.py  deep_agent.py  filesystem.py  planning.py  subagent.py
myagent/prompt/: toolcall.py
myagent/tool/: __init__.py  academic_search.py  base_tool.py  code_execution.py  data_analysis.py  filesystem.py  planning.py  subagent.py  terminate.py  tool_collection.py  web_content.py  web_search.py
myagent/trace/: __init__.py  decorators.py  exporter.py  manager.py  models.py  query.py  storage.py
myagent/web-console/: .gitignore  README.md  index.html  package-lock.json  package.json
myagent/web-console/src/: App.vue
myagent/ws/: __init__.py  context.py  events.py  outbound.py  plan_solver.py  retry_config.py  server.py  session.py  state_manager.py  utils.py
scripts/: myagent-ws  ws_print_messages.py  ws_test_template_agent.py
slide_agent_ws/: .env.example  Dockerfile  README.md  WS_MESSAGES.md  agents.py  pyproject.toml  server.py
slide_agent_ws/src/: __init__.py  agents.py  data2ppt.py  pipeline.py  slide_types.py  tools.py
template_agent/: README.md  WS_MESSAGES.md  __init__.py  agents.py  pyproject.toml  server.py  tools.py
template_agent/scripts/: test_split_markdown_tree.py  ws_e2e_check.py
template_agent/src/: WS_MESSAGES.md  agents.py  pipeline.py  tools.py
tests/: README.md  __init__.py  conftest.py
tests/manager/: __init__.py
tests/manager/fixtures/: __init__.py  (+2 more)
tools/: event_consistency_checker.py
web/ws-console/: README.md  how_to_use.md  package-lock.json  package.json  tsconfig.json
workdir/: llm_response.json
workspace/: final_report.md  llm_agent_research_plan.md
workspace/code/: analysis_scripts.py  results.txt
workspace/data/: academic_papers.md  analysis_results.md  web_content.md  web_search_results.md
(+37 files in other folders)
