[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myagent"
version = "0.0.1"
description = "Lightweight toolkit for building tool-aware LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "tiktoken>=0.7",
    "tenacity>=8.2",
    "loguru>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["myagent"]

[tool.hatch.build.targets.sdist]
include = ["myagent"]

[tool.uv]
package = true
